Fix front end and change to local host. Changed resource to experiments

--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,2 @@
-REACT_APP_GOOGLE_CLIENT_ID = 728803380770-gada7sk43uapo8glssci70bp0ic1t3ai.apps.googleusercontent.com
+# REACT_APP_GOOGLE_CLIENT_ID = 728803380770-gada7sk43uapo8glssci70bp0ic1t3ai.apps.googleusercontent.com
+REACT_APP_GOOGLE_CLIENT_ID = 1038949791268-l4irtal85k58a95o0u8d6sr5b494hh27.apps.googleusercontent.com
