updated experiment card bg colour

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
   "files.exclude": {
     "**/.git": false
-  }
+  },
+  "search.useIgnoreFiles": true,
+  "search.useGlobalIgnoreFiles": true
 }
