--- a/server/package.json
+++ b/server/package.json
@@ -9,10 +9,12 @@
     "startProd": "node index.js"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cloudinary": "^1.35.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "mongoose": "^7.0.1",
     "nodemon": "^2.0.21"
   }
