--- a/client/package.json
+++ b/client/package.json
@@ -17,14 +17,18 @@
     "@types/jest": "^26.0.23",
     "apexcharts": "^3.37.0",
     "axios": "^0.26.1",
+    "papaparse": "^5.4.1",
+    "plotly.js": "^2.20.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-plotly.js": "^2.6.0",
     "react-scripts": "^5.0.0",
     "web-vitals": "^1.1.1"
   },
   "devDependencies": {
     "@types/node": "^12.20.10",
+    "@types/papaparse": "^5.3.7",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "typescript": "^4.7.4"
